--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20.5.8",
