--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3"
   },
