--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "framer-motion": "^10.16.3",
+    "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
+    "react-i18next": "^13.2.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3"
