--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@floating-ui/react": "^0.25.3",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.3",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
