--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.25.3",
+    "@hookform/resolvers": "^3.3.1",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "classnames": "^2.3.2",
@@ -26,7 +27,8 @@
     "react-i18next": "^13.2.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.8",
