--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@hookform/resolvers": "^3.3.1",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.3",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
