--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.3",
     "i18next": "^23.5.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -33,6 +34,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.198",
     "@types/node": "^20.5.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
