--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^4.33.0",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.6",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.3",
     "i18next": "^23.5.1",
@@ -35,6 +36,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.3",
     "@types/lodash": "^4.14.198",
     "@types/node": "^20.5.8",
     "@types/react": "^18.2.15",
