--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.25.3",
     "@hookform/resolvers": "^3.3.1",
+    "@react-google-maps/api": "^2.19.2",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "axios": "^1.5.0",
